@@ -91,6 +91,7 @@ unit-tests/cond1
 unit-tests/comment
 unit-tests/export
 unit-tests/export-all
+unit-tests/forsubst
 unit-tests/moderrs
 unit-tests/modmatch
 unit-tests/modorder
